Wed Nov 23 13:35:31 2005  Tim Janik  <timj@gtk.org>

	* glib/gdataset.c: streamlined initialization code somewhat,
	removed GData node cache.

2005-11-22  Matthias Clasen  <mclasen@redhat.com>

	* glib/ghash.c (g_hash_table_ref): 
	(g_hash_table_unref): Mark these as new API.

	Avoid double locking in g_intern_string (#322133,
	Benedikt Meurer)

	* glib/gdataset.c (g_quark_from_string_internal): New 
	internal function which factors out common parts of 
	g_quark_from[_static]_string.
	(g_quark_from_string, g_quark_from_static_string):
	Use g_quark_from_string_internal.
	(g_intern_string, g_intern_static_string): Use
	g_quark_from_string_internal, and only take the
	lock once.
	(g_quark_new): Don't store the strings shifted by -1
	in the g_quarks array.
	(g_quark_to_string): Adapt to the previous change.

Tue Nov 22 14:04:26 2005  Tim Janik  <timj@imendio.com>

	* glib/ghash.h: 
	* glib/ghash.c: 
	g_hash_table_new_full(): create hash tables with a ref count of 1.
	g_hash_table_ref(): atomically ref_count+=1
	g_hash_table_unref(): atomically ref_count-=1, destroys hash table
	when refcount reaches 0.
	g_hash_table_destroy(): just destroy keys and values, unref by 1.
	g_hash_table_insert(): 
	g_hash_table_replace(): assert ref_count>0.

	* glib/gatomic.h: 
	* glib/gatomic.c: added 'volatile' qualifier to all atomic pointer and
	integer pointers.

2005-11-20  Behdad Esfahbod  <behdad@gnome.org>

	* glib/guniprop.c (g_unichar_get_mirror_char): Remove unused
	variables. (#321984, Andrew Paprocki)

2005-11-18  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2005-11-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.9.0 ===

	* glib/glib.symbols: Updates

	* glib/gutf8.c (g_utf8_offset_to_pointer): Add some performance
	hints to the docs. (Paolo Borelli)
	
	* NEWS: Updates

	* glib/gthread.c (g_thread_foreach): Mark as new api.

	* README.in: Updates.

	* glib/glib.symbols: 
	* glib/gdate.h: 
	* glib/gdate.c (g_date_set_time_t): 